GitHub Actions test

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,5 @@ __pycache__/
 # GitHub token for development
 /.gh_token
 
-# Test & debug files
-*.test.*
-*.debug.*
-
 # Output files
-/bar*.svg
+/output/*
