--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,31 +9,27 @@ on:
       - '**.py'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
-  linter:
+  lint:
     name: Lint code
     runs-on: ubuntu-latest
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.12
           cache: pip
-          cache-dependency-path: '.github/**/*requirements.txt'
+          cache-dependency-path: '.github/flake8.requirements.txt'
 
       - name: Install dependencies
-        run: |
-          pip install -U -r ".github/flake8.requirements.txt"
-          pip install -U pyupgrade
+        run: pip install -r ".github/flake8.requirements.txt"
 
       - name: Lint with flake8
         run: flake8 --show-source --statistics
-
-      - name: Check code with pyupgrade
-        run: |
-          find . -type f -name "*.py" -exec pyupgrade --py311-plus {} \;
-          test $(git status --porcelain | wc -l) = 0
