--- a/tox.ini
+++ b/tox.ini
@@ -9,22 +9,35 @@ require-plugins=
     flake8-comprehensions
     flake8-docstrings
     ; flake8-eradicate
-    flake8-import-order
+    ; flake8-import-order
     flake8-pie
     ; flake8-quotes
     flake8-simplify
     ; flake8-string-format
     pep8-naming
 
-inline-quotes="
+inline-quotes='"'
 max-line-length=120
-docstring-convention=pep257
-import-order-style=pep8
 ignore=
-    W503   ; Line break before binary operator (awaiting fix)
-    D1     ; Missing docstring
-    D400   ; First line should end with a period (comments)
-    PIE786 ; Use precise exception handlers
+
+; General:
+
+    ; Line break before binary operator
+    W503
+    ; Missing docstring
+    D1
+    ; First line should end with a period (comments)
+    D400
+    ; Use precise exception handlers.
+    PIE786
+    ; Loop control variable not used within the loop body. If this is intended, start the name with an underscore.
+    B007
+    ; Found for loop that reassigns the iterable it is iterating with each iterable value
+    B020
+    ; Unnecessary generator - rewrite as a set comprehension
+    C401
+    ; Unnecessary tuple literal - rewrite as a set literal.
+    C405
 
 [darglint]
 strictness=long
